2010-05-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14328: Include prototype+scriptaculous using API at the login screen (thanks to Steffen Gebert)
	* Added Feature #14324: Add spriteGeneratorAPI to support the new sprite-icon-API (thanks to Steffen Ritter)

2010-05-22  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14175: belog not shown / error when actions: error is selected (thanks to Philipp Thiele)

2010-05-21  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14443: Deprecate $TYPO3_CONF_VARS[GFX][TTFLocaleConv]
	* Cleaned up #9416: Code Cleanup for lang.php (Thanks to Stefano Kowalke)
	* Fixed bug #6555: template.relPathPrefix causes decoding of html-entities in affected attributes (Thanks to Martin Ficzel)
	* Fixed bug #13749: IRRE: Inline elements of translated records are not coppied correctly. (Thanks to Albrecht Koehnlein)

2010-05-20  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #7753: EM warns No XCLASS inclusion code found if you use $GLOBALS['TYPO3_CONF_VARS'] (thanks to Franz Holzinger)

2010-05-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #14413: htmlArea RTE: ExtJS resources are not released in IE when RTE closes

2010-05-18  Benjamin Mack  <benni@typo3.org>

	* Follow-up to #14277: Removed redundant code / Improve t3lib_compressor

2010-05-18  Ernesto Baschny  <ernst@cron-it.de>

	* Follow-up to bug #13670: Wrong variable name causing EM not to show "Extensions found only on this server" on "Import extensions" search result

2010-05-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14327: Condition misses check for no logged in user

2010-05-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14413: htmlArea RTE: ExtJS resources are not released in IE when RTE closes

2010-05-17  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14411: Use of deprecated method t3lib_BEfunc::getSetUpdateSignal in impexp
	* Follow-up to bug #13670: Fatal in t3lib_querygenerator